--- a/Crash/Crash.vcproj
+++ b/Crash/Crash.vcproj
@@ -43,6 +43,7 @@
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
+				ExceptionHandling="2"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
@@ -173,11 +174,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\BaseException.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\main.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\MSJExceptionHandler.cpp"
+				RelativePath=".\StackWalker.cpp"
 				>
 			</File>
 		</Filter>
@@ -187,7 +192,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\MSJExceptionHandler.h"
+				RelativePath=".\BaseException.h"
+				>
+			</File>
+			<File
+				RelativePath=".\StackWalker.h"
 				>
 			</File>
 		</Filter>
